--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "depcheck": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsonwebtoken": "^9.0.2",
